<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="50dp">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="25dp"
            android:layout_marginLeft="50dp"/>

        <EditText
            android:id="@+id/et_emailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:hint="Digite o seu email"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/senha"
            android:textSize="25dp"
            android:layout_marginLeft="50dp"/>


        <EditText
            android:id="@+id/et_senhaLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:hint="Digite a senha"
            android:textAlignment="center"
            android:inputType="textPassword"/>


        <CheckBox
            android:id="@+id/chkBox_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lembrar do Login?"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="Login"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btn_cadastroUsuario"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/cadastro"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/btn_RecuperarSenha"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/recuperarSenha"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"/>


    </LinearLayout>

</ScrollView>

