<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layoutFrag"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
        android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary" app:popupTheme="@style/AppTheme.PopupOverlay" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_gravity="center">


        <ImageButton
            android:id="@+id/Ibtn_addVideo"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:layout_marginRight="50dp"
            android:src="@drawable/icon_addvideo"/>


        <ImageButton
            android:id="@+id/Ibtn_addImg"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:src="@drawable/icon_addfoto"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/addVdo"
            android:gravity="center"
            android:layout_marginRight="50dp"/>

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/addImg"
            android:gravity="center"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_gravity="center">


        <ImageButton
            android:id="@+id/Ibtn_addComentario"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:layout_marginRight="50dp"
            android:src="@drawable/icon_addvideo"/>


        <ImageButton
            android:id="@+id/Ibtn_elementosEnviados"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:src="@drawable/icon_listaelementos"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/addComent"
            android:gravity="center"
            android:layout_marginRight="50dp"/>

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/listaElementos"
            android:gravity="center"/>

    </LinearLayout>



   <!-- <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layoutDono"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:visibility="gone">


            <ImageButton
                android:id="@+id/Ibtn_gerenciarMembros"
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:layout_marginRight="50dp"
                android:src="@drawable/icon_gerenciarmembros"/>


            <ImageButton
                android:id="@+id/Ibtn_salvarAplicacao"
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:src="@drawable/icon_saveapp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layoutTextDono"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:visibility="gone">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/gerenciarMembros"
                android:gravity="center"
                android:layout_marginRight="50dp"/>

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/salvarApp"
                android:gravity="center"/>

    </LinearLayout>  -->

    <com.google.android.libraries.cast.companionlibrary.widgets.MiniController
        android:id="@+id/miniController"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/mini_bg_shadow"
        app:auto_setup="true"
        android:visibility="gone">
    </com.google.android.libraries.cast.companionlibrary.widgets.MiniController>





</LinearLayout>